# a-bitset-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  NEWS.md  NOTICE  README.md  _config.yml  build.sh  build_install.sh
.changes/: 0.1.1.md
include/a-bitset-library/: abitset.h  abitset_expandable.h
src/: abitset.c  abitset_expandable.c
tests/: CMakeLists.txt
tests/src/: test_bitset.c  test_bitset_expandable.c
